--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,21 @@
 {
+  "name": "videochat",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+"scripts": {
+  "start": "node index.js",
+  "dev": "nodemon index.js"
+},
+"keywords": [],
+"author": "",
+"license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node": "^21.2.0"
+    "node": "^21.2.0",
+    "nodemon": "^3.0.2",
+    "serve": "^14.2.1",
+    "socket.io": "^4.7.2"
   }
 }
